# orderbook

./: '  .clang-format  .gitignore  :w  CMakeLists.txt  README.md  \  cmakeBuild.sh  cmakeInit.sh  cmakeMakeBuild.sh  improvements.md  main.cpp  order.h  orderbook.cpp  orderbook.h  tmp  tmp.cpp  todo  trade.h  types.h  usings.h
data/: input.txt
docs/: optimization_entry_template.md  performance_log.md
notes/: api_architecture.md  architecture.md
scripts/: bench_env.sh  cmake_build.sh  commands_generator.py
src/: PublicAPI.cpp  PublicAPI.h  SPSCqueue.cpp  SPSCqueue.h  main.cpp  order.h  orderbook.cpp  orderbook.h  trade.h  types.h  usings.h
src/api/: CMakeLists.txt  Consumer.cpp  Consumer.h  Messager.cpp  Messager.h  Producer.cpp  Producer.h  PublicAPI.cpp  PublicAPI.h  User.cpp  User.h  apiConstants.h
src/common/: strfuncs.cpp  strfuncs.h  types.h  usings.h
src/data_structures/: CMakeLists.txt  SPSCQueue.h  SPSCqueue.h
src/data_structures/containers/: ring_buffer.h
src/data_structures/spsc_queue/: SPSCQueue.h
src/fileops/: CMakeLists.txt  file.h  file_reader.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/net/: CMakeLists.txt  EpollLoop.cpp  EpollLoop.h  EpollManager.cpp  EpollManager.h  Socket.cpp  Socket.h
src/orderbook/: order.h  orderbook.cpp  orderbook.h  trade.h
src/public_api/: PublicAPI.cpp  PublicAPI.h  main.cpp
src/replay/: CMakeLists.txt  DOCS.md  main.cpp  replay.cpp  replay.h
src/tools/commandParser/: CMakeLists.txt  commandParser.cpp  commandParser.h
src/tools/obBench/: CMakeLists.txt  bench.cpp  bench.h  main.cpp
src/tools/replay/: CMakeLists.txt  DOCS.md  main.cpp  replay.cpp  replay.h
tests/benchmark/: bench.cpp  bench.h  rigtorp.h
tests/test_client/: client  client.cpp
tests/unit/: test_order.cpp  test_orderbook.cpp  test_ring_buffer.cpp  test_spscqueue.cpp
